--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,5 +31,6 @@
   "i18n-ally.enabledFrameworks": ["vue", "vue-sfc"],
   "i18n-ally.keystyle": "nested",
   "iconify.includes": ["ep"],
-  "unocss.root": "./docs"
+  "unocss.root": "./docs",
+  "i18n-ally.sourceLanguage": "zh-cn"
 }
